Draft of support of several collections in ClassIndexManager was added.